# hana

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN_REVIEW.md  README.ko.md  README.md  SPEC.ko.md  SPEC.md
src/: agents.rs  config.rs  error.rs  init.rs  main.rs  status.rs  sync.rs  tui.rs
src/helper/: broadcast_symlink.rs  broadcast_target_symlink.rs  build_destinations.rs  collect_skills.rs  collect_source_skills.rs  collect_sources.rs  collect_target_skills.rs  mod.rs  move_target_skills.rs  mv_skills.rs  relative_path.rs  resolve_target_destinations.rs
